--- a/paskaita_1.ipynb
+++ b/paskaita_1.ipynb
@@ -518,6 +518,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Juste Leisyte\n",
+      "Hello, my name is Juste Leisyte, I'm 24 years old and I enjoy painting\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "\n",
+    "my_name = 'Juste'\n",
+    "my_surname = \"Leisyte\"\n",
+    "print(my_name, my_surname)\n",
+    "print(f\"Hello, my name is {my_name} {my_surname}, I'm {10+14} years old and I enjoy painting\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PYTHON MAKES ME REALLY REALLY HAPPY!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "sakinys = \"Python makes me really really happy!\"\n",
+    "print(sakinys.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyThOn makes me really really happy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sakinys.replace(\"t\",\"T\").replace(\"o\",\"O\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18, 5)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3\n",
+    "sakinys_1 = \"Hello World, I am happy to learn Python!\"\n",
+    "sakinys_1.index(\"happy\"), len(\"happy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sakinys_1[18:24]: happy \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('sakinys_1[18:24]:', sakinys_1[18:24])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to: to \n"
+     ]
+    }
+   ],
+   "source": [
+    "sakinys_1.index('to'), len('to')\n",
+    "print('to:',sakinys_1[24:27])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sakinys_1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
