--- a/paskaita_2_new.ipynb
+++ b/paskaita_2_new.ipynb
@@ -263,10 +263,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (int(loginis_kintamasis))\n",
+    "print(int(False)) # keicia false i skaiciu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "50 == number:  True\n",
+      "100 == number:  False\n",
+      "100 != number:  True\n",
+      "90 != number:  True\n",
+      "50 != number:  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 50\n",
+    "print(10 > 5)\n",
+    "print (10 < 5)\n",
+    "print (10 < 10)\n",
+    "print (10 <= 10)\n",
+    "print (10 >= 10)\n",
+    "print ('50 == number: ', 50 == number) # = - priskiria verte, == - palygina\n",
+    "print ('100 == number: ', 100 == number)\n",
+    "\n",
+    "print ('100 != number: ', 100 != number) # != nera lygus\n",
+    "print ('90 != number: ', 90 != number) # != nera lygus\n",
+    "print ('50 != number: ', 50 != number) # != nera lygus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "bool(tekstas):  True\n",
+      "bool():  False\n",
+      "bool(' ') : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# galima keisti skaiciu i logine verte\n",
+    "\n",
+    "print(bool(1654))\n",
+    "print(bool(0)) # skaiciu vercia atgal i logini kintamaji\n",
+    "print(bool(-1)) # viskas kas ne nulis bus true\n",
+    "\n",
+    "print(\"bool(tekstas): \", bool('tekstas')) # galima ir teksta keisti i logini kintamaji\n",
+    "print(\"bool(): \", bool(''))\n",
+    "print(\"bool(' ') :\", bool(' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 < 5 : False\n",
+      "10 > 8 : True\n",
+      "10 < 5 and 10 > 8: False\n",
+      "10 < 50 and 10 > 8: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# galime lyginti kelias salygas\n",
+    "# and salygoje is abieju pusiu turi veikti\n",
+    "\n",
+    "print('10 < 5 :', 10 < 5)\n",
+    "print('10 > 8 :', 10 > 8)\n",
+    "print('10 < 5 and 10 > 8:', 10 < 5 and 10 > 8) # is abieju pusiu turi buti tiesos kad butu tiesa\n",
+    "\n",
+    "print('10 < 50 and 10 > 8:', 10 < 50 and 10 > 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 < 5 or 10 > 8: True\n",
+      "10 < 50 or 10 > 8: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# or salygoje bent vienas is abieju turi but true, reikia bent vieno\n",
+    "\n",
+    "print('10 < 5 or 10 > 8:', 10 < 5 or 10 > 8)\n",
+    "print('10 < 50 or 10 > 8:', 10 < 50 or 10 > 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# not - duoda priesinga atsakyma\n",
+    "\n",
+    "print(not 5 > 10)\n",
+    "print(not True)\n",
+    "print(not False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Vilnius' in 'Vilnius, Kaunas')\n",
+    "print ('Klaipeda' in 'Vilnius, Kaunas')\n",
+    "print ('s' in 'Vilnius, Kaunas')\n",
+    "print ('kaunas' in 'Vilnius, Kaunas')\n",
+    "print('Kaunas' in 'Vilnius, Kaunas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True == 1)\n",
+    "print(False == 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Boolean uzduotys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Deklaruokite True reiksme 5 skirtingais budais\n",
+    "\n",
+    "print(bool(-3))\n",
+    "print(not 1 > 2)\n",
+    "print(5 < 7)\n",
+    "print(1 == 1)\n",
+    "print(not 's' in 'Lova' and 2>1)\n",
+    "print(not 's' in 'Lova')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Deklaruokite False reiksme 5 skirtingais budais\n",
+    "print(0 == 1)\n",
+    "print (2 > 10)\n",
+    "print (not 10 > 2)\n",
+    "print ('d' in 'abc')\n",
+    "print(bool(0))\n",
+    "print ('s' in 'Lova')\n",
+    "print (not 's' in 'Lova' and 2 > 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(True)) # keicia logini kintamaji i teksta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.0999999999999996\n"
+     ]
+    }
+   ],
+   "source": [
+    "float_1 = 2.2\n",
+    "float_2 = 3.3\n",
+    "print(float_1-float_2)"
+   ]
   },
   {
    "cell_type": "code",
