--- a/paskaita_3_new.ipynb
+++ b/paskaita_3_new.ipynb
@@ -93,6 +93,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150 km/hours\n",
+      "1314000 km/year\n",
+      "108000 km/months\n",
+      "3600 km/days\n",
+      "0.041666666666666664 km/seconds\n",
+      "valandu:  2560.0\n",
+      "metu:  0.2922374429223744\n",
+      "menesiu:  3.5555555555555554\n",
+      "dienu:  106.66666666666667\n",
+      "sekundziu:  9216000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Jeigu noretume nuvaziuoti iki menulio (384000km) automobiliu, kurio greitis\n",
+    "# 150km/h, kiek valandu, metu, menesiu, dienu, sekundziu tai uztruktu?\n",
+    "\n",
+    "dist_moon = 384000 #km\n",
+    "car_speed_h = 150 #km/h\n",
+    "\n",
+    "car_speed_y = car_speed_h * 24 * 365\n",
+    "car_speed_m = car_speed_h * 24 * 30\n",
+    "car_speed_d = car_speed_h * 24\n",
+    "car_speed_s = car_speed_h / 60 / 60\n",
+    "\n",
+    "print(car_speed_h, 'km/hours')\n",
+    "print(car_speed_y, 'km/year')\n",
+    "print(car_speed_m, 'km/months')\n",
+    "print(car_speed_d, 'km/days')\n",
+    "print(car_speed_s, 'km/seconds')\n",
+    "\n",
+    "print('valandu: ', dist_moon / car_speed_h)\n",
+    "print('metu: ', dist_moon / car_speed_y)\n",
+    "print('menesiu: ', dist_moon / car_speed_m)\n",
+    "print('dienu: ', dist_moon / car_speed_d)\n",
+    "print('sekundziu: ', dist_moon / car_speed_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1997-05-27\n",
+      "2022-02-23\n",
+      "Dienu skaicius nuo gimtadienio: 9038\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Kiek dienu praejo nuo jusu gimimo dienos?\n",
+    "\n",
+    "# import datetime\n",
+    "from datetime import date\n",
+    "\n",
+    "birthday = date(1997, 5, 27)\n",
+    "print(birthday)\n",
+    "today = date.today()\n",
+    "print(today)\n",
+    "\n",
+    "print(f'Dienu skaicius nuo gimtadienio: {(today - birthday).days}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1964-02-23\n",
+      "2022-02-23\n",
+      "Dienu skaicius nuo gimtadienio: 21185\n"
+     ]
+    }
+   ],
+   "source": [
+    "birthday_1 = date(1964, 2, 23)\n",
+    "print(birthday_1)\n",
+    "today = date.today()\n",
+    "print(today)\n",
+    "skirtumas_1 = (today - birthday_1)\n",
+    "print(f'Dienu skaicius nuo gimtadienio: {skirtumas_1.days}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 5, 464, 43, 645, 5, 3)\n",
+      "(2, 5, 464, 43, 645, 5)\n",
+      "(2, 5, 5, 43, 464, 645)\n",
+      "2\n",
+      "645\n",
+      "645\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Sudeti du tuple, isimti paskutini nari is sudeto tuple, isrikiuoti tuple, suskaiciuoti kiek yra kokios nors reiksmes ivesciu tuple, rasti didziausia reiksme\n",
+    "\n",
+    "my_tuple = (2, 5, 464) + (43, 645, 5, 3)\n",
+    "print(my_tuple)\n",
+    "my_tuple = my_tuple[:-1]\n",
+    "print(my_tuple)\n",
+    "my_tuple = tuple(sorted(my_tuple))\n",
+    "print(my_tuple)\n",
+    "\n",
+    "print(my_tuple.count(5))\n",
+    "print(my_tuple[-1]) \n",
+    "print(max(my_tuple))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
